# SapphireEngine

./: README.md
Sapphire/: Cargo.toml
Sapphire/src/: bev.rs  gli.rs  main.rs
Sapphire/src/components/: mod.rs
Sapphire/src/components/resources/: animation.rs  material.rs  mod.rs  model.rs
Sapphire/src/nodes/: batch.rs  mod.rs
Sapphire/src/renderers/: mod.rs  renderer.rs
Sapphire/src/renderers/glowy/: mod.rs
Sapphire/src/resources/: mesh.rs  mod.rs  sprite.rs
Sapphire/src/shaders/: vertex.glsl
Sapphire/src/util/: scheduler.rs
SapphireEditor/: Cargo.toml
SapphireTestBed/: Cargo.toml
doc/: opengl.md  vulkan.md
