[package]
name = "Sapphire"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.14.2"
imgui = "0.12.0"
nalgebra = "0.33.2"
winit = "0.30.5"
# apalis = { version = "0.5", features = ["redis"] } # Backends available: postgres, sqlite, mysql, amqp
tokio = { version = "1.41.1", features = ["full"] }
# tokio = "1.41.1"
glow = "0.15.0"
glium = "0.36.0"
image = "0.25.5"
tokio_schedule = "0.3.2"
glfw = "0.58.0"
ash = "0.38.0"
vulkano = "0.34.1"
