[package]
name = "Sapphire"
version = "0.1.0"
edition = "2021"

[dependencies]
# ECS, Ui
bevy_ecs = "0.14.2"
imgui = "0.12.0"

# Async
tokio = { version = "1.41.1", features = ["full"] }
tokio_schedule = "0.3.2"
# apalis = { version = "0.5", features = ["redis"] } # Backends available: postgres, sqlite, mysql, amqp

# OpenGL, I'll take glow
gl = "0.14.0"
glow = "0.15.0"
glium = "0.36.0"

# Context creator, idk which
winit = "0.30.5"
glfw = "0.58.0"

# Vulkan, I'll take vulkano
ash = "0.38.0"
vulkano = "0.34.1"

# Math, I like nalgebra, but tuts use cgmath
nalgebra = "0.33.2"
cgmath = "0.18.0"

## Other utils
image = "0.25.5"
rand = "0.8.5"
num = "0.4.3"
tobj = "4.0.2"
